--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,10 +4,13 @@
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
-    "16": "images/icon-16.png",
-    "128": "images/icon-128.png"
+    "16": "images/trollface-128.png",
+    "128": "images/trollface-128.png"
   },
   "default_locale": "en",
+  "content_scripts" : {
+
+  }
   "background": {
     "scripts": [
       "scripts/chromereload.js",
@@ -28,8 +31,8 @@
   },
   "browser_action": {
     "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "19": "images/trollface-128.png",
+      "38": "images/trollface-128.png"
     },
     "default_title": "meme-me",
     "default_script" : "scripts/background.js"
