--- a/face-detection-stuff/face-detection-chrome-extensions/app/manifest.json
+++ b/face-detection-stuff/face-detection-chrome-extensions/app/manifest.json
@@ -4,13 +4,14 @@
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
-    "16": "images/icon-16.png",
-    "128": "images/icon-128.png"
+    "16": "images/trollface-128.png",
+    "128": "images/trollface-128.png"
   },
   "default_locale": "en",
   "background": {
     "scripts": [
-      "scripts/chromereload.js"
+      "scripts/chromereload.js",
+      "scripts/background.js"
     ]
   },
   "permissions": [
@@ -63,8 +64,8 @@
   },
   "browser_action": {
     "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "19": "images/trollface-128.png",
+      "38": "images/trollface-128.png"
     },
     "default_title": "face detection chrome extensions"
   },
