--- a/face-detection-stuff/face-detection-chrome-extensions/app/manifest.json
+++ b/face-detection-stuff/face-detection-chrome-extensions/app/manifest.json
@@ -50,7 +50,8 @@
       "js": [
         "scripts/jquery.min.js",
         "scripts/jquery.facedetection.min.js",
-        "scripts/memefaces.js"
+        "scripts/memefaces.js",
+        "scripts/LeetSpeak.js"
       ],
       "css": [
         "styles/memefaces.css"
